Cập nhật: - Chuyển CSDL sang SQL 2008 R2 - Tạo mới MVC Credential - KTV chỉ hiện khi đã chấm công trong ngày hôm đó

--- a/WebApp/Areas/Admin/Views/Shared/_Navigation.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_Navigation.cshtml
@@ -105,13 +105,13 @@
                             <a href="/Admin/Employee/Index">Nhân viên</a>
                         </li>
                         <li>
-                            <a href="/Admin/Violator/Index">Chấm công nhân viên</a>
-                        </li>
-                        <li>
                             <a href="/Admin/ViolatorKTV/Index">Chấm công KTV</a>
                         </li>
                         <li>
                             <a href="/Admin/DayOff/Index">Xin nghỉ phép</a>
+                        </li>
+                        <li>
+                            <a href="/Admin/Credential/Index">Phân quyền truy cập</a>
                         </li>
                     </ul>
                     <!-- /.nav-second-level -->
