--- a/WebApp/Areas/Admin/Views/DailyList/Create.cshtml
+++ b/WebApp/Areas/Admin/Views/DailyList/Create.cshtml
@@ -169,7 +169,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Voucher_ID, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.Voucher_ID, null, new { htmlAttributes = new { @class = "MakeWide" } })
+            @Html.DropDownListFor(model => model.Voucher_ID, null, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Voucher_ID, "", new { @class = "text-danger" })
         </div>
     </div>
